[package]
name = "imgui-sdl2-canvas-renderer"
version = "0.1.0"
edition = "2024"
authors = ["Lukas Kirschner"]
description = "SDL2 Canvas Renderer for dear imgui (SDL2_Renderer)"
documentation = "https://github.com/lukas-kirschner/imgui-sdl2-canvas-renderer"
repository = "https://github.com/lukas-kirschner/imgui-sdl2-canvas-renderer"
homepage = "https://github.com/lukas-kirschner/imgui-sdl2-canvas-renderer"
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = ["gui", "rendering"]

[dependencies]
imgui = "0.12.0"

[dependencies.sdl2]
version = "0.37.0"
default-features = true
features = ["unsafe_textures"]

[lints.clippy]
needless_range_loop = "allow"
collapsible_else_if = "allow"
collapsible_if = "allow"